force-app/main/default/objects/B_Customer__c.object
<CustomObject>
    <fields>
        <fullName>Address_of_Delivery__c</fullName>
        <label>Address of Delivery</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Products_Bought__c</fullName>
        <label>Products Bought</label>
        <summaryForeignKey>B_Invoice__c.B_Customer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>B_Customer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B_Customers</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Number_is_valid</fullName>
        <active>true</active>
        <description>Phone number validation.</description>
        <errorConditionFormula>IF(Len( Mobile_Number__c ) != 10, true,
IF(NOT(ISNUMBER( Mobile_Number__c )), true,
IF(ISBLANK( Mobile_Number__c ), true, false)))</errorConditionFormula>
        <errorDisplayField>Mobile_Number__c</errorDisplayField>
        <errorMessage>Phone number is not valid. 
1. Must contain 10 digits.</errorMessage>
    </validationRules>
</CustomObject>